testdata/fixtures/negative/public-import/pkg/axle/bad.go
package axle

import _ "example.com/app/fixtures"
